--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "license": "BSD-3-Clause",
   "dependencies": {
+    "@types/chai": "3.4.34",
+    "@types/node": "6.0.48",
     "benchmark": "2.1.1",
     "chai": "3.5.0",
     "charm": "0.2.0",
@@ -18,13 +20,11 @@
     "dojo": "2.0.0-alpha.7",
     "glob": "7.0.3",
     "istanbul": "0.4.1",
-    "leadfoot": "~1.7.0",
+    "leadfoot": "vladikoff/leadfoot#1.7.1-noDynamicViewport",
     "lodash-amd": "4.16.4",
     "mimetype": "0.0.8",
     "platform": "1.3.1",
-    "source-map": "0.1.33",
-    "@types/chai": "3.4.34",
-    "@types/node": "6.0.48"
+    "source-map": "0.1.33"
   },
   "devDependencies": {
     "intern": "3.2.3"
